--- a/assignment1.html
+++ b/assignment1.html
@@ -23,7 +23,7 @@
            
             <li>
                 <form method = "get" action = "assignment1.html">
-                <button type = "submit">A1: JS & DOM</button>
+                <button type = "submit">Assignments</button>
                 </form>
             </li>
             <!-- More assignments list will be added here. -->
