--- a/assignment1.html
+++ b/assignment1.html
@@ -46,7 +46,8 @@
     <div id = container>  
         
         <h2>Assignment 1: JS & DOM</h2>
-       <p>TBD.</p>
+        <a href = "https://wise3400.github.io/Assignment-1-Javascript_and_the_DOM/">Link to Assignment 1</a>
+        <a href = "https://github.com/wise3400/Assignment-1-Javascript_and_the_DOM/blob/main/index.html">Link to Code</a>
 
         
     </div>
