--- a/assignment1.html
+++ b/assignment1.html
@@ -49,6 +49,11 @@
         <a href = "https://wise3400.github.io/Assignment-1-Javascript_and_the_DOM/">Link to Assignment 1</a>
         <br>
         <a href = "https://github.com/wise3400/Assignment-1-Javascript_and_the_DOM/blob/main/index.html">Link to Code</a>
+        
+        <h2>Assignment 2: HTML Forms</h2>
+        <a href = "https://wise3400.github.io/Assignment-2-HTML-Forms/">Link to Assignment 2</a>
+        <br>
+        <a href = "https://github.com/wise3400/Assignment-2-HTML-Forms/blob/main/index.html">Link to Code</a>
 
         
     </div>
