--- a/assignment1.html
+++ b/assignment1.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A1: JS & DOM</title>
+    <title>Assignments</title>
     <link href = "css/assignment1.css" rel = "stylesheet">
 </head>
 
