--- a/assignment1.html
+++ b/assignment1.html
@@ -54,6 +54,8 @@
         <a href = "https://wise3400.github.io/Assignment-2-HTML-Forms/">Link to Assignment 2</a>
         <br>
         <a href = "https://github.com/wise3400/Assignment-2-HTML-Forms/blob/main/index.html">Link to Code</a>
+        
+        <h2>Assignment 3: JavaScript Debugging</h2>
 
         
     </div>
