--- a/assignment1.html
+++ b/assignment1.html
@@ -55,7 +55,10 @@
         <br>
         <a href = "https://github.com/wise3400/Assignment-2-HTML-Forms/blob/main/index.html">Link to Code</a>
         
-        <h2>Assignment 3: JavaScript Debugging</h2>
+        <h2>Assignment 3: Javascript Debugging</h2>
+        <a href = "https://wise3400.github.io/Assignment3-Javascript-Debugging/">Link to Assignment 2</a>
+        <br>
+        <a href = "https://github.com/wise3400/Assignment3-Javascript-Debugging/blob/main/quiz.js">Link to Code</a>
 
         
     </div>
