--- a/assignment1.html
+++ b/assignment1.html
@@ -56,9 +56,14 @@
         <a href = "https://github.com/wise3400/Assignment-2-HTML-Forms/blob/main/index.html">Link to Code</a>
         
         <h2>Assignment 3: Javascript Debugging</h2>
-        <a href = "https://wise3400.github.io/Assignment3-Javascript-Debugging/">Link to Assignment 2</a>
+        <a href = "https://wise3400.github.io/Assignment3-Javascript-Debugging/">Link to Assignment 3</a>
         <br>
         <a href = "https://github.com/wise3400/Assignment3-Javascript-Debugging/blob/main/quiz.js">Link to Code</a>
+
+        <h2>Assignment 4: APIs and JSON</h2>
+        <a href = "https://wise3400.github.io/Assignment-4-APIs-JSON/">Link to Assignment 4</a>
+        <br>
+        <a href = "https://github.com/wise3400/Assignment-4-APIs-JSON/blob/main/bundle.js">Link to Code</a>
 
         
     </div>
