--- a/assignment1.html
+++ b/assignment1.html
@@ -65,6 +65,10 @@
         <br>
         <a href = "https://github.com/wise3400/Assignment-4-APIs-JSON/blob/main/bundle.js">Link to Code</a>
 
+        <h2>Assignment 5: NPM and Bundlers</h2>
+        <a href = "https://wise3400.github.io/Assignment5-NPM-Bundlers/">Link to Assignment 5</a>
+        <br>
+        <a href = "https://github.com/wise3400/Assignment5-NPM-Bundlers/blob/main/index.html">Link to Code</a>
         
     </div>
 
