--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
             </li>
             <!-- More assignments list will be added here. -->
             <li>
-                <form method = "get" action = "project1.html">
-                <button type = "submit">Project 1: TBD</button>
+                <form method = "get" action = "https://wise3400.github.io/ATLS4630-Project1/">
+                <button type = "submit">Modern JavaScript Web App</button>
                 </form>
             </li>
 
