--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <h1>Web Front End Development Fall 2023</h1>
     </header>
     <nav>
+        <h2 class = "sr-only">Navigation Bar</h2>
         <ul>
             <li>
                 <form method = "get" action = "index.html">
