--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
             <li>
                 <form method = "get" action = "project2.html">
-                <button type = "submit">Project 2: TBD</button>
+                <button type = "submit">Pokémon App</button>
                 </form>
             </li>
 
