--- a/project2.html
+++ b/project2.html
@@ -46,7 +46,7 @@
     
     <div id = container>  
         
-        <h2>Project 1: Modern JavaScript Web App </h2>
+        <h2>Project 2: React Application Group Project </h2>
         <a href = "https://project-2-six-dusky.vercel.app/">Link to Project 1</a>
         <br>
         <a href = "https://github.com/wise3400/Project-2/blob/main/Pokemon/src/PokemonList.jsx">Link to Code</a>
