--- a/assignment1.html
+++ b/assignment1.html
@@ -30,7 +30,7 @@
             <!-- More assignments list will be added here. -->
             <li>
                 <form method = "get" action = "project1.html">
-                <button type = "submit">Modern JavaScript Web App</button>
+                <button type = "submit">Weather App</button>
                 </form>
             </li>
 
