--- a/project2.html
+++ b/project2.html
@@ -30,7 +30,7 @@
             <!-- More assignments list will be added here. -->
             <li>
                 <form method = "get" action = "project1.html">
-                <button type = "submit">Modern JavaScript Web App</button>
+                <button type = "submit">Weather App</button>
                 </form>
             </li>
 
@@ -47,7 +47,7 @@
     <div id = container>  
         
         <h2>Project 2: React Application Group Project </h2>
-        <a href = "https://project-2-six-dusky.vercel.app/">Link to Project 1</a>
+        <a href = "https://project-2-six-dusky.vercel.app/">Link to Project 2</a>
         <br>
         <a href = "https://github.com/wise3400/Project-2/blob/main/Pokemon/src/PokemonList.jsx">Link to Code</a>
          
